# Snake

./: .gitignore  CMakeLists.txt  README.md
src/: game.c  main.c  snake.h  snake_array.c  snake_linked_list.c
